# update_verifier

./: .gitignore  CMakeLists.txt  Makefile  build.bat  build.sh  lineageos-key  main.cpp
compat/android-base/: logging.h
libverifier/: asn1_decoder.h  verifier.cpp
